force-app/main/default/objects/Lead/fields/Capital_City_Text__c.field-meta.xml
<CustomField>
    <fullName>Capital_City_Text__c</fullName>
    <label>Capital City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>