force-app/main/default/objects/Lead/fields/Country_ISO_Code_2_Text__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO_Code_2_Text__c</fullName>
    <label>Country ISO Code 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>