force-app/main/default/objects/Lead/fields/Subregion__c.field-meta.xml
<CustomField>
    <fullName>Subregion__c</fullName>
    <formula>CountryLayer__r.Subregion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subregion</label>
    <type>Text</type>
</CustomField>